Update coding assignment 1

--- a/index.qmd
+++ b/index.qmd
@@ -35,7 +35,7 @@ submitted by 11:59 p.m. on the due date***.
 |  3   | `r advdate(mon,2)`  | Grammar of graphics            |                         [📖](https://r4ds.hadley.nz/data-import "r4ds, chap. 7") [📖](https://r4ds.hadley.nz/data-visualize.html "r4ds, 2")                         |  [📺](https://youtu.be/QG1oDJPoIio "Make a bar chart") [📺](https://youtu.be/-1YhCql-gMo "Make a histogram")   | [🖥️](slides/week-3.1.qmd "Week 3.1 slides") |            |                         |
 |      | `r advdate(wed,2)`  | Which visualization do I use?  |                                                      [📖](https://r4ds.hadley.nz/layers.html "r4ds, 9.1-9.4")                                                       | [📺](https://youtu.be/PnmQ2MFQpIc "Make a line chart") [📺](https://youtu.be/FiosjUVyfLM "Make a scatterplot") | [🖥️](slides/week-3.2.qmd "Week 3.2 slides") |            |                         |
 |  4   | `r advdate(mon,3)`  | Visualization best practices   |                                                     [📖](https://r4ds.hadley.nz/communication "r4ds, chap. 11")                                                     |                                                       📺                                                       | [🖥️](slides/week-4.1.qmd "Week 4.1 slides") |            |                         |
-|      | `r advdate(wed,3)`  | Coding assignment 1            |                                                                                 📖                                                                                  |                                                                                                                |                     🖥️                      |     🧮     |   `r advdate(sun,4)`    |
+|      | `r advdate(wed,3)`  | Coding assignment 1            |                                             [📖](https://www-jstor-org.proxygw.wrlc.org/stable/1951731?seq=8 "Lipset")                                              |                                                                                                                |                     🖥️                      |     🧮     |   `r advdate(sun,4)`    |
 |  5   | `r advdate(mon,4)`  | What is tidy data?             |                                                                                 📖                                                                                  |                                                       📺                                                       |                     🖥️                      |            |                         |
 |      | `r advdate(wed,4)`  | Grammar of data wrangling      |                                                                                 📖                                                                                  |                                                       📺                                                       |                     🖥️                      |            |                         |
 |  6   | `r advdate(mon,5)`  | Grouping and summarizing       |                                                                                 📖                                                                                  |                                                       📺                                                       |                     🖥️                      |            |                         |
