--- a/index.qmd
+++ b/index.qmd
@@ -20,7 +20,10 @@ advdate <- function(day, week) {
 }
 ```
 
-This page displays an outline of the topics, content, and assignments for the semester. Links, to slides, assignments and course resources will go live as the semester progresses. ***All assignments must be submitted by 11:59 p.m. on the due date***.
+This page displays an outline of the topics, content, and assignments
+for the semester. Links, to slides, assignments and course resources
+will go live as the semester progresses. ***All assignments must be
+submitted by 11:59 p.m. on the due date***.
 
 ::: column-screen-inset-right
 | Week | Date                | Topic                          |                                                                               Reading                                                                               |                                                     Video                                                      |                   Slides                    |                           Assignment                            |        Due Date         |
@@ -34,7 +37,7 @@ This page displays an outline of the topics, content, and assignments for the se
 |  4   | `r advdate(mon,3)`  | Visualization best practices   |                                                     [📖](https://r4ds.hadley.nz/communication "r4ds, chap. 11")                                                     |                                                       📺                                                       | [🖥️](slides/week-4.1.qmd "Week 4.1 slides") |                                                                 |                         |
 |      | `r advdate(wed,3)`  | Coding assignment 1            |                                             [📖](https://www-jstor-org.proxygw.wrlc.org/stable/1951731?seq=8 "Lipset")                                              |                                                                                                                |                                             | [🧮](assignments/coding-assignment-1.qmd "Coding assignment 1") |   `r advdate(sun,4)`    |
 |  5   | `r advdate(mon,4)`  | What is tidy data?             |                                               [📖](https://r4ds.hadley.nz/data-tidy#sec-tidy-data "r4ds, chap. 5.2")                                                |                  [📺](https://youtu.be/ZwJsSjJRuMU?si=A6ucJ7jHL1s3T3uT "Reading data into R")                  | [🖥️](slides/week-5.1.qmd "Week 5.1 slides") |                                                                 |                         |
-|      | `r advdate(wed,4)`  | Grammar of data wrangling      |                                                  [📖](https://r4ds.hadley.nz/data-transform "rd4s, chap. 3.1-3.4")                                                  |                                                       📺                                                       |                     🖥️                      |                                                                 |                         |
+|      | `r advdate(wed,4)`  | Grammar of data wrangling      |                                                  [📖](https://r4ds.hadley.nz/data-transform "rd4s, chap. 3.1-3.4")                                                  |           [📺](https://youtu.be/ScQD47eJeAE?si=Rc6epCTKhQVtkCjS "Transforming data w/ dplyr verbs")            |   [🖥️](slides/week-5.2 "Week 5.2 slides")   |                                                                 |                         |
 |  6   | `r advdate(mon,5)`  | Grouping and summarizing       |                                                [📖](https://r4ds.hadley.nz/data-transform#groups "r4ds, chap. 3.5")                                                 |                                                       📺                                                       |                     🖥️                      |                                                                 |                         |
 |      | `r advdate(wed,5)`  | Joining data frames            |                                                      [📖](https://r4ds.hadley.nz/joins.html "r4ds, chap. 19")                                                       |                                                       📺                                                       |                     🖥️                      |                                                                 |                         |
 |  7   | `r advdate(mon,6)`  | Tidying data                   |                                                    [📖](https://r4ds.hadley.nz/data-tidy "r4ds, chap. 5.3-5.5")                                                     |                                                       📺                                                       |                     🖥️                      |                                                                 |                         |
