Update slides 5.1 and 5.2

--- a/slides/week-5.1.qmd
+++ b/slides/week-5.1.qmd
@@ -95,6 +95,7 @@ Thoughts? :sunglasses: :thought_balloon:
 
 <br>
 
+- Get lucky and find it
 - Wrangle it ourselves
 - Use a package where it has been wrangled for us
 - Download via an API
@@ -365,113 +366,3 @@ countdown(minutes = 5,
           right = "10%")
 ```
 
-# Data Frames
-
-## What is a Data Frame?
-
-<br>
-
-- Special kind of tabular data used in data science
-- Each column can be a different data type
-- Data frames are the most common data structure in R
-
-## What is a Tibble? 
-
-<br>
-
-- Modern data frames in R
-- Offers better printing and subsetting behaviors 
-- Does not convert character vectors to factors by default
-- Displays only the first 10 rows and as many columns as fit on screen
-- Column names are preserved exactly, even if they contain spaces
-
-## Creating a Tibble {.smaller}
-
-<br> 
-
-- When you read data into R with `readr` you automatically get a tibble
-- You can create a tibble using `tibble()` from the **tibble** package:
-
-```{r}
-  library(tibble)
-  
-  # Create a tibble
-  my_tibble <- tibble(
-    name = c("Alice", "Bob", "Charlie"),
-    age = c(25, 30, 35),
-    height = c(160, 170, 180),
-    is_student = c(TRUE, FALSE, FALSE)
-  )
-  
-my_tibble  
-```
-
-## Common Data Types {.smaller}
-
-- **\<chr> (Character)**: Stores text strings
-  - Example: `"hello"`, `"R programming"`
-  
-- **\<dbl> (Double)**: Stores decimal (floating-point) numbers
-  - Example: `3.14`, `-1.0`
-  
-- **\<int> (Integer)**: Stores whole numbers (integers)
-  - Example: `1`, `-100`, `42`
-
-- **\<lgl> (Logical)**: Stores boolean values (`TRUE`, `FALSE`, `NA`)
-  - Example: `TRUE`, `FALSE`, `NA`
-
-- **\<fct> (Factor)**: Stores categorical variables with fixed levels
-  - Example: `factor(c("low", "medium", "high"))`
-
-- **\<date> (Date)**: Stores dates in the "YYYY-MM-DD" format
-  - Example: `as.Date("2024-09-05")`
-
-## Other Data Types {.smaller}
-
-<br>
-
-- **\<dttm> (Date-Time or POSIXct)**: Stores date-time objects (both date and time).
-  - Example: `as.POSIXct("2024-09-05 14:30:00")`
-
-- **\<time> (Time)**: Specifically stores time-of-day values (rarely seen without a date)
-  - Example: `"14:30:00"`
-  
-- **\<list> (List)**: Stores lists, where each entry can be a complex object.
-  - Example: `list(c(1, 2, 3), c("a", "b", "c"))`  
-
-## Dates and Times with `lubridate`
-
-- **`lubridate`** is an R package that makes it easier to work with dates and times
-
-- Use convenient functions to store dates in different formats
-
-```{r}
-library(lubridate)
-  
-# Store a date
-my_date <- ymd("2024-09-05")
-my_date2 <- mdy("09-05-2024")
-my_date3 <- dmy("05-09-2024")
-  
-# Print in long form
-format(my_date, "%B %d, %Y")
-```
-
-## Your Turn
-
-<br>
-
-- Create your own tibble
-- Make it on a topic you find interesting
-- Try to include at least three data types
-
-```{r}
-#| label: timer6
-#| echo: false
-
-library(countdown)
-countdown(minutes = 5, 
-          id = "timer1", 
-          bottom = "10%", 
-          right = "10%")
-```
