Update index (norris reading)

--- a/index.qmd
+++ b/index.qmd
@@ -41,7 +41,7 @@ submitted by 11:59 p.m. on the due date***.
 |  6   | `r advdate(mon,5)`  | Grammar of data wrangling      |                                                [📖](https://r4ds.hadley.nz/data-transform#groups "r4ds, chap. 3.5")                                                 |             [📺](https://youtu.be/mgBwVzMV-v8?si=4KP-qyDyssI92iFe "Grouping and summarizing data")             |   [🖥️](slides/week-6.1 "Week 6.1 slides")   |                                                                 |                         |
 |      | `r advdate(wed,5)`  | Joining data frames            |                                                      [📖](https://r4ds.hadley.nz/joins.html "r4ds, chap. 19")                                                       |          [📺](https://youtu.be/wNF3ZPneHWw?si=TyiXrsAxgbdrztD4 "Merge data frames with left_join()")           | [🖥️](slides/week-6.2.qmd "Week 6.2 slides") |                                                                 |                         |
 |  7   | `r advdate(mon,6)`  | Tidying data                   |                                                    [📖](https://r4ds.hadley.nz/data-tidy "r4ds, chap. 5.3-5.5")                                                     |                     [📺](https://youtu.be/xa0tYCfHHTI?si=1YII-L90IY05UZ70 "Tidying data")                      |  [🖥️](slides/week-7.1.qmd "Week 7 slides")  |                                                                 |                         |
-|      | `r advdate(wed,6)`  | Coding assignment 2            |                                                                                 📖                                                                                  |                                                                                                                |                     🖥️                      |                               🧮                                |   `r advdate(sun,7)`    |
+|      | `r advdate(wed,6)`  | Coding assignment 2            |                                            [📖](https://link.springer.com/article/10.1057/palgrave.ap.5500151 "Norris")                                             |                                                                                                                |                     🖥️                      |                               🧮                                |   `r advdate(sun,7)`    |
 |  8   | `r advdate(mon,7)`  | The language of models         |                                                                                 📖                                                                                  |                                                       📺                                                       |                     🖥️                      |                                                                 |                         |
 |      | `r advdate(wed,7)`  | Linear regression              |                                                                                 📖                                                                                  |                                                       📺                                                       |                     🖥️                      |                               ✍️                                |   `r advdate(sun,8)`    |
 |  9   | `r advdate(mon,8)`  | Multiple regression            |                                                                                 📖                                                                                  |                                                       📺                                                       |                     🖥️                      |                                                                 |                         |
