--- a/project/project-assignment-1.qmd
+++ b/project/project-assignment-1.qmd
@@ -52,4 +52,4 @@ Briefly list and discuss the data sources you plan to use. What data do they con
 
 ## Submission
 
-*That is it for Project Assignment 1! Please export this document and submit it via Blackboard by the due date.*
+*That is it for Project Assignment 1! Please export this document and submit it via Blackboard by the due date. Each student should submit a separate QMD file so that we have something in Blackboard to grade.*
