--- a/slides/week-8.1.qmd
+++ b/slides/week-8.1.qmd
@@ -1,5 +1,5 @@
 ---
-title: Modeling
+title: Linear Regression
 date: today
 date-format: long
 footer: "[DATS 1001 Website](https://ds4all.rocks)"
@@ -398,3 +398,414 @@ $\hat{Y} = 9 + 1.60*{YrsEdu}$
 - Linear model with one predictor: $Y = a + bX$
 - For any given data...
 - How do we figure out what the best values are for $a$ and $b$??
+
+```{r}
+#| label: setup
+#| echo: false
+
+library(tidyverse)
+library(tidymodels)
+library(vdemdata)
+```
+
+# Estimation
+
+## Linear Model with Single Predictor
+
+<br>
+
+Goal: Estimate Democracy score ($\hat{Y_{i}}$) of a country given level of GDP per capita ($X_{i}$).
+
+<br>
+
+Or: Estimate relationship between GDP per capita and democracy.
+
+## Linear Model with Single Predictor
+
+```{r}
+#| label: model-data
+#| echo: false
+
+modelData <- vdem |> 
+  filter(year == 2019) |> 
+  select(
+    country = country_name, 
+    lib_dem = v2x_libdem, 
+    wealth = e_gdppc, 
+    corruption = v2x_corr, 
+    ) |>
+  mutate(log_wealth = log(wealth)) 
+  
+
+ggplot(modelData, aes(x = log_wealth, y = lib_dem)) +
+  geom_point() +
+  geom_smooth(method = "lm", color = "#E48957", se = FALSE) +
+  labs(x = "GDP per capita", y = "Liberal Democracy Index") +
+  theme_bw()
+```
+
+## Estimate Model 
+
+```{r}
+#| label: fit-model
+#| echo: true
+
+model1 <-  lm(lib_dem ~ log_wealth, data = modelData) 
+
+summary(model1)
+```
+
+## 
+
+In equation form... How do we interpret the model?
+
+<br>
+
+$$\widehat{Democracy}_{i} = 0.13 + 0.12 * {loggdppc}_{i}$$
+
+## Question
+
+<br>
+
+How do we get the "best" values for the slope and intercept?
+
+
+## How would you draw the "best" line?
+
+```{r}
+#| label: best-line
+#| echo: false
+
+ggplot(modelData, aes(x = log_wealth, y = lib_dem)) +
+  geom_point() +
+ # geom_smooth(method = "lm", color = "#E48957", se = FALSE) +
+  labs(x = "GDP per capita", y = "Liberal Democracy Index") +
+  theme_bw()
+```
+
+## How would you draw the "best" line?
+
+```{r}
+#| label: best-line2
+#| echo: false
+
+ggplot(modelData, aes(x = log_wealth, y = lib_dem)) +
+  geom_point() +
+  geom_smooth(method = "lm", color = "#E48957", se = FALSE) +
+  labs(x = "GDP per capita", y = "Liberal Democracy Index") +
+  theme_bw()
+```
+
+## Least squares regression
+
+<br>
+
+- Remember the residual is the difference between the actual value and the predicted value
+
+. . .
+
+- The regression line minimizes the sum of squared residuals.
+
+## Least squares regression
+
+<br>
+
+- Residual for each point is:  $e_i = y_i - \hat{y}_i$
+
+- Least squares regression line minimizes $\sum_{i = 1}^n e_i^2$.
+
+. . .
+
+- Why do we square the residual?
+
+. . .
+
+- Why not take absolute value?
+
+    - Principle: larger penalty for residuals further away
+    - Math: makes the math easier and some nice properties (not our concern here...)
+
+## Least squares regression
+
+
+```{r}
+#| label: best-line3 
+#| echo: false
+
+mod_fit <- linear_reg() %>%
+  set_engine("lm") %>%
+  fit(lib_dem ~ log_wealth, data = modelData)
+
+fit_tidy <- tidy(mod_fit$fit) 
+fit_aug  <- augment(mod_fit$fit) %>%
+  mutate(res_cat = ifelse(.resid > 0, TRUE, FALSE))
+
+a <- round(fit_tidy$estimate[1], 2)
+b <- round(fit_tidy$estimate[2], 2)
+
+ggplot(data = fit_aug) +
+  geom_point(aes(x = log_wealth, y = lib_dem, color = res_cat)) +
+  geom_line(aes(x = log_wealth, y = .fitted), size = 0.75, color = "#8E2C90") + 
+  labs(
+    title = "GDP per Capita and Democracy",
+    x = "GDP per Capita",
+    y = "Libearl Democracy Index"
+  ) +
+  guides(color = "none") +
+  scale_color_manual(values = c("#260b27", "darkorange")) +
+  theme_bw()
+#+
+#  geom_text(aes(x = 0, y = 150), label = "Positive residual", color = "#e6b0e7", hjust = 0, size = 8) +
+ # geom_text(aes(x = 150, y = 25), label = "Negative residual", color = "#260b27", hjust = 0, size = 8)
+
+```
+
+## Very Simple Example
+
+What should the slope and intercept be?
+
+```{r}
+#| label: best-line4
+#| echo: false
+
+# create data
+dat <- tibble(
+    x = c(1, 2, 3),
+    y = c(1, 2, 3)
+)
+
+ggplot(dat, aes(y=y, x=x)) +
+  geom_point(size=3, color="darkblue") +
+  xlim(0, 4) + ylim(0,4) +
+  theme_bw()
+```
+
+
+## Example
+
+$\hat{Y} = 0 + 1*X$
+
+```{r}
+#| label: best-line5
+#| echo: false
+
+# create data
+ggplot(dat, aes(y=y, x=x)) +
+  geom_point(size=3, color="darkblue") +
+  xlim(0, 4) + ylim(0,4) +
+  geom_segment(x=0, y=0, xend=4, yend=4, color="darkorange") +
+  theme_bw()
+```
+
+## Example
+
+What is the sum of squared residuals?
+
+```{r}
+#| label: best-line6
+#| echo: false
+
+# create data
+ggplot(dat, aes(y=y, x=x)) +
+  geom_point(size=3, color="darkblue") +
+  xlim(0, 4) + ylim(0,4) +
+  geom_segment(x=0, y=0, xend=4, yend=4, color="darkorange") +
+  theme_bw()
+```
+
+## Example
+
+What is sum of squared residuals for $y = 0 + 0*X$?
+
+```{r}
+#| label: best-line7
+#| echo: false
+
+# create data
+ ggplot(dat, aes(y=y, x=x)) +
+  geom_point(size=3, color="darkblue") +
+  xlim(0, 4) + ylim(0,4) +
+  geom_segment(x=0, y=0, xend=4, yend=0, color="black") +
+  theme_bw()
+```
+
+
+## Example
+
+What is sum of squared residuals for $y = 0 + 0*X$?
+
+```{r}
+#| label: best-line8
+#| echo: false
+
+# create data
+ ggplot(dat, aes(y=y, x=x)) +
+  geom_point(size=3, color="darkblue") +
+  xlim(0, 4) + ylim(0,4) +
+  geom_segment(x=0, y=0, xend=4, yend=0, color="black") +
+  theme_bw()
+```
+
+
+```{r}
+#| label: best-line9
+
+(1-0)^2 + (2-0)^2 + (3-0)^2
+```
+
+## Example
+
+What is sum of squared residuals for $y = 0 + 2*X$?
+
+```{r}
+#| label: best-line10
+#| echo: false
+
+# create data
+ ggplot(dat, aes(y=y, x=x)) +
+  geom_point(size=3, color="darkblue") +
+  xlim(0, 4) + ylim(0,8) +
+  geom_segment(x=0, y=0, xend=4, yend=8, color="black") +
+  theme_bw()
+```
+
+## Example
+
+What is sum of squared residuals for $y = 0 + 2*X$?
+
+```{r}
+#| label: best-line11
+#| echo: false
+
+ ggplot(dat, aes(y=y, x=x)) +
+  geom_point(size=3, color="darkblue") +
+  xlim(0, 4) + ylim(0,8) +
+  geom_segment(x=0, y=0, xend=4, yend=8, color="black") +
+  theme_bw()
+```
+
+
+```{r}
+#| label: best-line12
+
+(1-2)^2 + (2-4)^2 + (3-6)^2
+```
+
+
+## One more...
+
+What is sum of squared residuals for $y = 0 + -1*X$?
+
+```{r}
+#| label: best-line13
+#| echo: false
+
+ ggplot(dat, aes(y=y, x=x)) +
+  geom_point(size=3, color="darkblue") +
+  xlim(0, 4) + ylim(-4,4) +
+  geom_segment(x=0, y=0, xend=4, yend=-4, color="black") +
+  theme_bw()
+```
+
+## One more...
+
+What is sum of squared residuals for $y = 0 + -1*X$?
+
+```{r}
+#| label: best-line14
+#| echo: false
+
+ ggplot(dat, aes(y=y, x=x)) +
+  geom_point(size=3, color="darkblue") +
+  xlim(0, 4) + ylim(-4,4) +
+  geom_segment(x=0, y=0, xend=4, yend=-4, color="black") +
+  theme_bw()
+```
+
+
+```{r}
+#| label: best-line15
+
+(1+1)^2 + (2+2)^2 + (3+3)^2
+```
+
+## Cost Function
+
+Sum of Squared Residuals as function of possible values of $b$
+
+```{r}
+#| label: cost-function
+#| echo: false
+
+sse <- tibble(
+          b=c(-2, -1, 0, 1, 2, 3, 4), 
+          c=c(81, 56, 14, 0, 14, 56, 81)
+          )
+
+ggplot(sse, aes(y=c, x=b)) +
+    geom_point(size=3, color="darkred") +
+    labs(
+    x = "Slope (b)",
+    y = "Sum of Squared Residuals"
+  ) +
+  theme_bw()
+```
+
+
+## Least Squares Regression
+
+<br>
+
+- When we estimate a least squares regression, it is looking for the line that minimizes sum of squared residuals
+
+- In the simple example, I set $a=0$ to make it easier.  More complicated when searching for combination of $a$ and $b$ that minimize, but same basic idea
+
+## Least Squares Regression
+
+<br>
+
+- There is a way to solve for this analytically for linear regression (i.e., by doing math...)
+
+    -- They made us do this in grad school...
+
+. . .
+
+- In machine learning, people also use gradient descent algorithm in which the computer searches over possible combinations of $a$ and $b$ until it settles on the lowest point.    
+
+## Least Squares Regression
+
+```{r}
+#| label: ssr-viz
+#| echo: false
+
+sse <- tibble(
+          b=c(-2, -1, 0, 1, 2, 3, 4), 
+          c=c(81, 56, 14, 0, 14, 56, 81)
+          )
+
+ggplot(sse, aes(y=c, x=b)) +
+    geom_point(size=3, color="darkred") +
+  #  geom_line(color = "darkred") +
+    labs(
+    x = "Slope (b)",
+    y = "Sum of Squared Residuals"
+  ) +
+  theme_bw()
+```
+
+## Least Squares Regression
+
+```{r}
+#| label: regression-line
+#| echo: false
+
+ggplot(modelData, aes(x = log_wealth, y = lib_dem)) +
+  geom_point() +
+  geom_smooth(method = "lm", color = "#E48957", se = FALSE) +
+  labs(x = "GDP per capita", y = "Liberal Democracy Index") +
+  theme(
+    axis.text  = element_blank(),
+    axis.ticks = element_blank()
+    ) +
+  theme_bw()
+```
