--- a/index.qmd
+++ b/index.qmd
@@ -43,7 +43,7 @@ submitted by 11:59 p.m. on the due date***.
 |  7   | `r advdate(mon,6)`  | Tidying data                   |                                                    [📖](https://r4ds.hadley.nz/data-tidy "r4ds, chap. 5.3-5.5")                                                     |                     [📺](https://youtu.be/xa0tYCfHHTI?si=1YII-L90IY05UZ70 "Tidying data")                      |  [🖥️](slides/week-7.1.qmd "Week 7 slides")  |                                                                 |                         |
 |      | `r advdate(wed,6)`  | Coding assignment 2            |                                            [📖](https://link.springer.com/article/10.1057/palgrave.ap.5500151 "Norris")                                             |                                                                                                                |                                             | [🧮](assignments/coding-assignment-2.qmd "Coding assingment 2") |   `r advdate(sun,7)`    |
 |  8   | `r advdate(mon,7)`  | The language of models         |                                                                                                                                                                     |                                                                                                                | [🖥️](slides/week-8.1.qmd "Week 8.1 slides") |                                                                 |                         |
-|      | `r advdate(wed,7)`  | Linear regression              |                                                  [📖](https://openintro-ims.netlify.app/model-slr "IMS, chap. 7")                                                   |                             [📺](https://youtu.be/dLc-lfEEYss?si=-Zelb-HBAP-MPvnF)                             |                     🖥️                      |  [✍️](project/project-assignment-1.qmd "Project assignment 1")  |   `r advdate(sun,8)`    |
+|      | `r advdate(wed,7)`  | Linear regression              |                                                  [📖](https://openintro-ims.netlify.app/model-slr "IMS, chap. 7")                                                   |                             [📺](https://youtu.be/dLc-lfEEYss?si=-Zelb-HBAP-MPvnF)                             | [🖥️](slides/week-8.2.qmd "Week 8.2 slides") |  [✍️](project/project-assignment-1.qmd "Project assignment 1")  |   `r advdate(sun,8)`    |
 |  9   | `r advdate(mon,8)`  | Multiple regression            |                                                                                 📖                                                                                  |                                                       📺                                                       |                     🖥️                      |                                                                 |                         |
 |      | `r advdate(wed,8)`  | Logistic regression            |                                                                                 📖                                                                                  |                                                       📺                                                       |                     🖥️                      |                                                                 |                         |
 |  10  | `r advdate(mon,9)`  | Predictive modeling            |                                                                                 📖                                                                                  |                                                       📺                                                       |                     🖥️                      |                                                                 |                         |
